--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
 
-body {
+html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: 'Oswald', sans-serif;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #f4f1de;
 }
 
+
+
 * {
-  /* box-sizing: content-box; */
+  box-sizing: border-box;
 }
